--- a/Public/main.css
+++ b/Public/main.css
@@ -50,12 +50,36 @@ body{
     padding-top: 40px;
     align-items: center;
     text-align: center;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 body h1{
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 body h2{
     margin-bottom: 50px;
+    margin-top: 10px;
 }
+
+body p{
+    text-align: left;
+}
+
+.event-div{
+    text-align: left;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.event-div h2{
+    margin-bottom: 10px;
+}
+
+/* .contact-us-item{
+    position: relative;
+    bottom: 0px;
+} */
