--- a/Public/main.css
+++ b/Public/main.css
@@ -3,6 +3,7 @@
     --secondary-accent-color: #8C1E41;
     --white: #FFFFFF;
     --text-color: black;
+    --gray: #747474;
 }
 
 h1{
@@ -91,22 +92,63 @@ body p{
 .code-block-div{
     text-align: left;
     border: solid black 1px;
+    background-color: var(--gray);
+    /* display: grid; */
+    padding: 15px;
+    /* grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-column-gap: 25px; */
+
+}
+
+.two-column {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
     grid-column-gap: 25px;
-
 }
 
-.code-block-div h2 {
+/* .code-block-div h2 {
     grid-column: span 2;
-}
+} */
 
 .code-block-div p {
     margin: 0;
 }
 
 .live-html-asset-block{
+    display: flex;
     align-items: center;
-    background-color: black;
+    justify-content: center;
+    background-color: beige;
+    border: solid black 1px;
+    min-height: 200px;
+}
+
+.live-html-asset-accessible-button {
+    background-color: var(--secondary-accent-color);
+    color: var(--white);
+    padding: 10px;
+    cursor: pointer;
+    box-shadow: black 2px 2px;
+
+}
+
+.live-html-asset-accessible-button:hover, .live-html-asset-accessible-button::selection {
+    box-shadow: black 3px 3px;
+}
+
+.live-html-asset-accessible-button:active {
+    box-shadow: none;
+}
+
+code, pre {
+    background-color: beige;
+    display: flex;
+    padding: 15px;
+    align-content: center;
+    font-size: 20px;
+}
+
+pre {
+    border: black solid 1px;
 }
